mordified font & fixed overflowing of elements

--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
+@font-face {
+  font-family: "montserrat";
+  src: url(assets/fonts/Montserrat/Montserrat-VariableFont_wght.ttf);
+}
+@font-face {
+  font-family: "fraunces";
+  src: url(assets/fonts/Fraunces/Fraunces-VariableFont_SOFT-WONK-opsz-wght.ttf);
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -17,7 +26,7 @@ body {
   display: flex;
   border-radius: 0.8rem;
   max-width: 40rem;
-  max-height: 30rem;
+  /* max-height: 30rem; */
   background-color: rgb(255, 255, 255);
 }
 
